2008-01-15  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1866446 (Rob Van der Sanden):
	* source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
	(maximumBarWidth): New field,
	(BoxAndWhiskerRenderer): Initialise new field,
	(getMaximumBarWidth): New method,
	(setMaximumBarWidth): Likewise,
	(equals): Updated for new field,
	* tests/org/jfree/chart/renderer/category/junit/BoxAndWhiskerRendererTests.java
	(testEquals): Updated to check new field.

2008-01-10  David Gilbert  <david.gilbert@object-refinery.com>

	Bug 1864222:
	* source/org/jfree/data/time/TimeSeries.java
	(createCopy(RegularTimePeriod, RegularTimePeriod)): Handle empty range,
	* tests/org/jfree/data/time/junit/TimeSeriesTests.java
	(testBug1864222): New test method.

2008-01-10  David Gilbert  <david.gilbert@object-refinery.com>

	Bug 1868521:
	* source/org/jfree/chart/ChartUtilities.java
	(writeChartAsJPEG): Create RGB image rather than ARGB.

----------  JFREECHART 1.0.9 RELEASED ------------------------

2008-01-04  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/XYPlot.java
	(drawQuadrants): Fix painting error when quadrant origin is outside plot
	area.

2008-01-03  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
	(drawHorizontalItem): Check visibility of average marker,
	(drawVerticalItem): Likewise,
	* source/org/jfree/chart/renderer/xy/XYBoxAndWhiskerRenderer.java
	(drawHorizontalItem): Check visibility of average marker,
	(drawVerticalItem): Likewise.

2007-12-20  David Gilbert  <david.gilbert@object-refinery.com>

    Fixes bug 1848961:
    * source/org/jfree/chart/renderer/category/GroupedStackedBarRenderer.java
    (calculateBarW0): Use correct dataset index.

2007-12-19  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/Week.java
    (Week(Date, TimeZone)): Hand on the zone,